nginx/nginx-no-root-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
spec:
  rules:
  - host: service00.training.clastix.io
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: 80
